src/osha/theme/browser/resources/multimedia/multimedia.css
.ellipsis {
    display: block;
    overflow: hidden;
    white-space: nowrap;
    -o-text-overflow: ellipsis;
    text-overflow: ellipsis;
}

body.template-multimedia-image-details-view #content {
    width: auto;
}

body.template-multimedia-folder-listing-view div.folder_item {
    clear: left;
    border-bottom: 1px dashed black;
    margin-bottom: 10px;
}

body.template-multimedia-folder-listing-view div.folder_item img {
    float: left;
    padding: 0 10px 10px 0;
}

body.template-multimedia-image-details-view a[rel="contactSheet"] {
    position: relative;
}

/* @group Gallery */

body.template-multimedia-image-details-view .mainImage {
   float: left;
   margin-bottom: 20px;
   width: 630px;
}

body.template-multimedia-image-details-view #content .mainImage img {
	width: 630px;
	max-width: 630px;
	margin: 0;
	float: left;
	outline: silver 1px solid;
}

body.template-multimedia-image-details-view .mainImage a {
	position: relative;
	float: left;
	margin-bottom: 10px;
}

body.template-multimedia-image-details-view .mainImage a:before {
	content: " ";
	display: block;
	-webkit-box-shadow: inset 0 2px 20px rgba(0,0,0,0.4);
	-moz-box-shadow: inset 0 2px 20px rgba(0,0,0,0.4);
	-o-box-shadow: inset 0 2px 20px rgba(0,0,0,0.4);
	box-shadow: inset 0 2px 20px rgba(0,0,0,0.4);
	width: 100%;
	height: 100%;
	position: absolute;
}


body.template-multimedia-image-details-view ul.thumbnails {
	width: 240px;
	float: right;
	margin-right: -290px;
}

body.template-multimedia-image-details-view ul.thumbnails li {
	float: left;
	width: 70px;
	overflow: hidden;
	height: 70px;
	margin-left: 0 !important;
	margin-right: 10px !important;
	margin-bottom: 10px !important;
	padding: 0 !important;
	position: static !important;
	-webkit-box-shadow: 0 2px 5px rgba(0,0,0,0.3);
	-moz-box-shadow: 0 2px 5px rgba(0,0,0,0.3);
	box-shadow: 0 2px 5px rgba(0,0,0,0.3);
	-o-box-shadow: 0 2px 5px rgba(0,0,0,0.3);
	outline: silver 1px solid;
}

body.template-multimedia-image-details-view ul.thumbnails li.current {
	margin: -4px 6px 6px -4px !important;
	border: 4px solid #2c6c85;
}

body.template-multimedia-image-details-view ul.thumbnails li:before {
	display: none;
	margin: 0;
	padding: 0;
}

body.template-multimedia-image-details-view ul.thumbnails li a {
	width: 120px;
	margin-left: -25px;
	text-align: center;
	height: 70px;
	float: left;
}

body.template-multimedia-image-details-view ul.thumbnails li:hover {
	margin: -4px 6px 6px -4px !important;
	border: 4px solid white;
}

body.template-multimedia-image-details-view ul.thumbnails li a img {
	min-height: 70px;
	min-width: 70px;
	height: 70px;
}

body.template-multimedia-image-details-view ul.thumbnails li a img.landscape {
   height: auto;
   width: 70px;
}

body.template-multimedia-image-details-view ul.thumbnails li.portrait a img {
	height: auto;
	width: 70px;
}

body.template-multimedia-image-details-view .noScript {
    display: none;
}

/* @end */


/* @group multimedia film listing */
body.template-multimedia-film-episodes-listing-view div#video_container {
    display: none;
}

body.template-multimedia-film-episodes-listing-view div#film,
body.template-multimedia-film-episodes-listing-view div.episode {
    position: relative;
    border-bottom: 1px dashed black;
    width: 100%;
    padding: 0 0 10px 0;
}

body.template-multimedia-film-episodes-listing-view div.episode {
    padding-top: 10px;
}

body.template-multimedia-film-episodes-listing-view div.video_link {
    float: left;
    overflow: hidden;
    margin: 0 10px 10px 0;
}

body.template-multimedia-film-episodes-listing-view div.episode div.video_link {
    position: relative;
    width: 100px;
    height: 56px;
}

body.template-multimedia-film-episodes-listing-view div#film a.video,
body.template-multimedia-film-episodes-listing-view div#film div.video_link {
    width: 300px;
    height: 169px;
}

body.template-multimedia-film-episodes-listing-view div.video_link a {
    position: absolute;
    z-index: 10;
}

body.template-multimedia-film-episodes-listing-view div#film div.video_link a:hover,
body.template-multimedia-film-episodes-listing-view div.video_link a:hover {
    background: url("video_play.png") no-repeat scroll 125px 60px transparent;
    opacity: 0.9;
}

body.template-multimedia-film-episodes-listing-view div.episode div.video_link a:hover {
    background-position: 25px 4px;
}

body.template-multimedia-film-episodes-listing-view div.episode a.video,
body.template-multimedia-film-episodes-listing-view div.episode img.video-thumbnail {
    position: absolute;
    top: 0;
    left: 0;
    width: 100px;
    height: 56px;
    margin-bottom: 0;
}

body.template-multimedia-film-episodes-listing-view #content img.video-thumbnail {
    margin-bottom: 0;
}

body.template-multimedia-film-episodes-listing-view div#film img.video-thumbnail {
    width: 300px;
}

body.template-multimedia-film-episodes-listing-view div#film a.video {
    position: absolute;
    top: 0;
    left: 0;
}

body.template-multimedia-film-episodes-listing-view div#film,
body.template-multimedia-film-episodes-listing-view img.video-thumbnail,
body.template-multimedia-film-episodes-listing-view div.episode {
    float: left;
    clear: left;
}

body.template-lipstick-view .scrubber li h4,
body.template-multimedia-film-listing-view #content .scrubber li h4,
body.template-multimedia-image-folders-view #content .scrubber li h4,
body.template-multimedia-film-listing-view .scrubber li a strong,
body.template-multimedia-image-folders-view .scrubber li a strong {
   font: normal 13px/25px Verdana,Helvetica,"Lucida Grande",Lucida,Arial,sans-serif;
   text-shadow: none;
   font-weight: normal;
}

body.template-multimedia-film-listing-view #content .scrubber li h4,
body.template-multimedia-image-folders-view .scrubber li h4 {
   background-color: #E6E8ED;
   color: #144989;
}

